deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    app: backstage
    app.kubernetes.io/name: backstage
